# smartCity-CAG

./: .gitignore  CMakeLists.txt  README.md
include/: ASifttDetector.h  utils.h
script/: extract_scene_multi.py
src/: photoLocation.cpp
src/sift/: ASifttDetector.cpp  asift_main.cpp
src/utils/: utils.cpp
